--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==3.1.2 
-requests==2.32.5 
-numpy==2.2.6 
-gunicorn==21.2.0 
+Flask==3.1.2
+requests==2.32.5
+numpy==2.2.6
+gunicorn==21.2.0
 scikit-learn==1.7.2
 joblib==1.5.3
+pandas==2.2.3
 
